[gd_scene load_steps=10 format=3 uid="uid://d1iurx8ly20h5"]

[ext_resource type="Texture2D" uid="uid://cwo36ye64df0p" path="res://assets/player/parrot.png" id="1_583w6"]
[ext_resource type="Script" path="res://scenes/animal/animal.gd" id="1_m4iv6"]
[ext_resource type="FontFile" uid="uid://b8jh7vdt5ycpu" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_8502n"]
[ext_resource type="Texture2D" uid="uid://83xhg6l3amk5" path="res://assets/items/arrow.png" id="4_t7dqy"]
[ext_resource type="AudioStream" uid="uid://cghtwipvuk3ge" path="res://assets/audio/stretch2.ogg" id="5_82xlp"]
[ext_resource type="AudioStream" uid="uid://c0ga705fqe0i6" path="res://assets/audio/catapult.ogg" id="6_wjvpj"]
[ext_resource type="AudioStream" uid="uid://c50bvisfmn538" path="res://assets/audio/kick_wood.ogg" id="7_w8qi1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_e358d"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_3pd5o"]
radius = 19.0263

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_e358d")
freeze = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_m4iv6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_583w6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3pd5o")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, -9.53674e-07)
scale = Vector2(2.1, 2.1)

[node name="AnimalState" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -31.0
offset_top = -50.0
offset_right = 39.0
offset_bottom = -25.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8502n")
theme_override_font_sizes/font_size = 24
text = "READY"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_t7dqy")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_82xlp")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wjvpj")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_w8qi1")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
